@@ -26,6 +26,7 @@
             Puck.js: Fix regression where IR LED was left on after transmission (fix #1969)
             Graphics: Fix overdraw when drawing ellipses/circles
             NRF52840: Use SPI3 by default as it's more capable/faster than SPI0
+            NRF52840: Create new NRF_GPIO_PIN_X_FAST as Nordic's gpio functions will no longer inline!
  
      2v08 : nRF52: Added option to build in I2C slave support
             Fix Tensorflow aiGesture regression from 2v07 (re-add opcodes) (fix #1936)
